# TuringLanguage

./: .gitignore  CMakeLists.txt  README.md  basic.h  fileparser.cpp  fileparser.h  log.cpp  main.cpp  main.h  statement.cpp  statement.h  turingmachine.cpp  turingmachine.h
include/: basic.h  fileparser.h  main.h  statement.h  turingmachine.h
src/: fileparser.cpp  main.cpp  statement.cpp  turingmachine.cpp
